@@ -31,16 +31,18 @@
 #define cbStateType         CTRL_COMBOBOX2("cbStateType")
 #define cbStateFunc         CTRL_COMBOBOX("cbStateFunc")
 #define cbFinalFunc         CTRL_COMBOBOX("cbFinalFunc")
+#define cbSortOp            CTRL_COMBOBOX("cbSortOp")
 #define txtInitial          CTRL_TEXT("txtInitial")
 
 
 
 BEGIN_EVENT_TABLE(dlgAggregate, dlgTypeProperty)
     EVT_TEXT(XRCID("cbBaseType"),                   dlgAggregate::OnChangeTypeBase)
-    EVT_COMBOBOX(XRCID("cbBaseType"),               dlgProperty::OnChange)
+    EVT_COMBOBOX(XRCID("cbBaseType"),               dlgAggregate::OnChangeType)
     EVT_TEXT(XRCID("cbStateType"),                  dlgAggregate::OnChangeTypeState)
-    EVT_COMBOBOX(XRCID("cbStateType"),              dlgProperty::OnChange)
+    EVT_COMBOBOX(XRCID("cbStateType"),              dlgAggregate::OnChangeType)
     EVT_COMBOBOX(XRCID("cbStateFunc"),              dlgProperty::OnChange)
+    EVT_COMBOBOX(XRCID("cbSortOp"),                 dlgProperty::OnChange)
     EVT_TEXT(XRCID("cbStateFunc"),                  dlgProperty::OnChange)
 END_EVENT_TABLE();
 
@@ -65,6 +67,9 @@ int dlgAggregate::Go(bool modal)
     if (!connection->BackendMinimumVersion(7, 5))
         cbOwner->Disable();
 
+    if (!connection->BackendMinimumVersion(8, 1))
+        cbSortOp->Disable();
+
     if (aggregate)
     {
         // edit mode
@@ -79,14 +84,17 @@ int dlgAggregate::Go(bool modal)
         cbFinalFunc->Append(aggregate->GetFinalFunction());
         cbFinalFunc->SetSelection(0);
 
+        cbSortOp->Append(aggregate->GetSortOp());
+        cbSortOp->SetSelection(0);
+
         txtInitial->SetValue(aggregate->GetInitialCondition());
 
         if (!connection->BackendMinimumVersion(7, 4))
             txtName->Disable();
         cbBaseType->Disable();
         cbStateType->Disable();
-        cbStateFunc->Disable();
         cbFinalFunc->Disable();
+        cbSortOp->Disable();
         txtInitial->Disable();
     }
     else
@@ -136,20 +144,20 @@ void dlgAggregate::CheckChange()
 void dlgAggregate::OnChangeTypeBase(wxCommandEvent &ev)
 {
     cbBaseType->GuessSelection(ev);
-    CheckChange();
+    OnChangeType(ev);
 }
 
 void dlgAggregate::OnChangeTypeState(wxCommandEvent &ev)
 {
     cbStateType->GuessSelection(ev);
-    CheckChange();
+    OnChangeType(ev);
 }
 
 void dlgAggregate::OnChangeType(wxCommandEvent &ev)
 {
-    procedures.Clear();
     cbStateFunc->Clear();
     cbFinalFunc->Clear();
+    cbSortOp->Clear();
 
     if (cbBaseType->GetGuessedSelection() >= 0 && cbStateType->GetGuessedSelection() >= 0)
     {
@@ -158,21 +166,21 @@ void dlgAggregate::OnChangeType(wxCommandEvent &ev)
             wxT("  FROM pg_proc p\n")
             wxT("  JOIN pg_type t ON t.oid=p.prorettype\n")
             wxT("  JOIN pg_namespace n ON n.oid=pronamespace\n")
-            wxT(" WHERE proargtypes[2] = 0");
+            wxT(" WHERE COALESCE(proargtypes[2],0) = 0");
 
 
         pgSet *set=connection->ExecuteSet(qry +
             wxT("\n   AND prorettype = ") + GetTypeOid(cbStateType->GetGuessedSelection()+1) +
             wxT("\n   AND proargtypes[0] = ") + GetTypeOid(cbStateType->GetGuessedSelection()+1) +
-            wxT("\n   AND (proargtypes[1]= 0 OR proargtypes[1]= ") 
+            wxT("\n   AND (COALESCE(proargtypes[1],0) = 0 OR proargtypes[1]= ") 
             + GetTypeOid(cbBaseType->GetGuessedSelection()) + wxT(")"));
 
         if (set)
         {
             while (!set->Eof())
             {
-                procedures.Add(database->GetQuotedSchemaPrefix(set->GetVal(wxT("nspname"))) + qtIdent(set->GetVal(wxT("proname"))));
-                cbStateFunc->Append(database->GetSchemaPrefix(set->GetVal(wxT("nspname"))) + set->GetVal(wxT("proname")));
+                cbStateFunc->Append(database->GetSchemaPrefix(set->GetVal(wxT("nspname"))) + set->GetVal(wxT("proname")),
+                                    database->GetQuotedSchemaPrefix(set->GetVal(wxT("nspname"))) + qtIdent(set->GetVal(wxT("proname"))));
 
                 set->MoveNext();
             }
@@ -180,25 +188,46 @@ void dlgAggregate::OnChangeType(wxCommandEvent &ev)
         }
 
 
-        procedures.Add(wxEmptyString);
         cbFinalFunc->Append(wxT(" "));
 
         set=connection->ExecuteSet(qry +
             wxT("\n   AND proargtypes[0] = ") + GetTypeOid(cbStateType->GetGuessedSelection()+1) +
-            wxT("\n   AND proargtypes[1]= 0"));
+            wxT("\n   AND COALESCE(proargtypes[1],0)= 0"));
 
         if (set)
         {
             while (!set->Eof())
             {
-                procedures.Add(database->GetQuotedSchemaPrefix(set->GetVal(wxT("nspname"))) + qtIdent(set->GetVal(wxT("proname"))));
-                cbFinalFunc->Append(database->GetSchemaPrefix(set->GetVal(wxT("nspname"))) + set->GetVal(wxT("proname")));
+                cbFinalFunc->Append(database->GetSchemaPrefix(set->GetVal(wxT("nspname"))) + set->GetVal(wxT("proname")),
+                                    database->GetQuotedSchemaPrefix(set->GetVal(wxT("nspname"))) + qtIdent(set->GetVal(wxT("proname"))));
 
                 set->MoveNext();
             }
             delete set;
         }
+
+        cbSortOp->Append(wxT(" "), wxEmptyString);
+
+        set=connection->ExecuteSet(
+            wxT("SELECT oprname, nspname\n")
+            wxT("  FROM pg_operator op\n")
+            wxT("  JOIN pg_namespace nsp on nsp.oid=oprnamespace\n")
+            wxT(" WHERE oprleft = ") + GetTypeOid(cbBaseType->GetGuessedSelection()) + wxT("\n")
+            wxT("   AND oprright = ") + GetTypeOid(cbBaseType->GetGuessedSelection()) + wxT("\n"));
+
+        if (set)
+        {
+            while (!set->Eof())
+            {
+                wxString key = database->GetQuotedSchemaPrefix(set->GetVal(wxT("nspname"))) + qtIdent(set->GetVal(wxT("oprname")));
+                wxString txt = database->GetSchemaPrefix(set->GetVal(wxT("nspname"))) + set->GetVal(wxT("oprname"));
+                cbSortOp->Append(txt, key);
+                set->MoveNext();
+            }
+            delete set;
+        }
     }
+        
     CheckChange();
 }
 
@@ -221,18 +250,22 @@ wxString dlgAggregate::GetSql()
         name=GetName();
         sql = wxT("CREATE AGGREGATE ") + schema->GetQuotedPrefix() + qtIdent(name)
             + wxT("(\n   BASETYPE=") + GetQuotedTypename(cbBaseType->GetGuessedSelection())
-            + wxT(",\n   SFUNC=") + procedures.Item(cbStateFunc->GetSelection())
+            + wxT(",\n   SFUNC=") + cbStateFunc->GetStringKey()
             + wxT(", STYPE=") + GetQuotedTypename(cbStateType->GetGuessedSelection() +1); // skip "any" type
 
         if (cbFinalFunc->GetSelection() > 0)
         {
             sql += wxT(",\n   FINALFUNC=") 
-                + procedures.Item(cbFinalFunc->GetSelection() + cbStateFunc->GetCount());
+                + cbFinalFunc->GetStringKey();
         }
         wxString initial=txtInitial->GetValue().Strip(wxString::both);
         if (!initial.IsEmpty())
             sql += wxT(",\n   INITCOND=") + qtString(initial);
-        
+
+        wxString opr=cbSortOp->GetStringKey();
+        if (!opr.IsEmpty())
+            sql += wxT(",\n   SORTOP=") + opr;
+
         sql += wxT(");\n");
 
         AppendOwnerNew(sql, wxT("AGGREGATE ") + schema->GetQuotedPrefix() + qtIdent(name)+ 
