@@ -50,6 +50,8 @@ wxString pgAggregate::GetSql(wxTreeCtrl *browser)
         AppendIfFilled(sql, wxT(",\n  FINALFUNC="), qtIdent(GetFinalFunction()));
         if (GetInitialCondition().length() > 0)
           sql += wxT(",\n  INITCOND=") + qtString(GetInitialCondition());
+        AppendIfFilled(sql, wxT(",\n  SORTOP="), GetQuotedSortOp());
+
         sql += wxT("\n);\n")
             + GetOwnerSql(8, 0, wxT("AGGREGATE ") + GetQuotedFullIdentifier() 
                 + wxT("(") + qtIdent(GetInputType())
@@ -88,6 +90,8 @@ void pgAggregate::ShowTreeDetail(wxTreeCtrl *browser, frmMain *form, ctlListView
         properties->AppendItem(_("State function"), GetStateFunction());
         properties->AppendItem(_("Final type"), GetFinalType());
         properties->AppendItem(_("Final function"), GetFinalFunction());
+        if (GetConnection()->BackendMinimumVersion(8,1))
+            properties->AppendItem(_("Sort operator"), GetSortOp());
         properties->AppendItem(_("Initial condition"), GetInitialCondition());
         properties->AppendItem(_("System aggregate?"), GetSystemObject());
         properties->AppendItem(_("Comment"), GetComment());
@@ -113,7 +117,7 @@ pgObject *pgAggregate::Refresh(wxTreeCtrl *browser, const wxTreeItemId item)
 pgObject *pgAggregate::ReadObjects(pgCollection *collection, wxTreeCtrl *browser, const wxString &restriction)
 {
     pgAggregate *aggregate=0;
-    pgSet *aggregates= collection->GetDatabase()->ExecuteSet(
+    wxString sql=
         wxT("SELECT aggfnoid::oid, proname AS aggname, pg_get_userbyid(proowner) AS aggowner, aggtransfn,\n")
         wxT(        "aggfinalfn, proargtypes[0] AS aggbasetype, ")
         wxT(        "CASE WHEN (ti.typlen = -1 AND ti.typelem != 0) THEN (SELECT at.typname FROM pg_type at WHERE at.oid = ti.typelem) || '[]' ELSE ti.typname END as inputname, ")
@@ -121,8 +125,20 @@ pgObject *pgAggregate::ReadObjects(pgCollection *collection, wxTreeCtrl *browser
         wxT(        "CASE WHEN (tt.typlen = -1 AND tt.typelem != 0) THEN (SELECT at.typname FROM pg_type at WHERE at.oid = tt.typelem) || '[]' ELSE tt.typname END as transname, ")
         wxT(        "prorettype AS aggfinaltype, ")
         wxT(        "CASE WHEN (tf.typlen = -1 AND tf.typelem != 0) THEN (SELECT at.typname FROM pg_type at WHERE at.oid = tf.typelem) || '[]' ELSE tf.typname END as finalname, ")
-        wxT(        "agginitval, description\n")
-        wxT("  FROM pg_aggregate ag\n")
+        wxT(        "agginitval, description");
+
+    if (collection->GetDatabase()->BackendMinimumVersion(8, 1))
+    {
+        sql += wxT(", oprname, opn.nspname as oprnsp\n")
+               wxT("  FROM pg_aggregate ag\n")
+               wxT("  LEFT OUTER JOIN pg_operator op ON op.oid=aggsortop\n")
+               wxT("  LEFT OUTER JOIN pg_namespace opn ON opn.oid=op.oprnamespace");
+    }
+    else
+        sql +=  wxT("\n  FROM pg_aggregate ag\n");
+
+
+    pgSet *aggregates= collection->GetDatabase()->ExecuteSet(sql +
         wxT("  JOIN pg_proc pr ON pr.oid = ag.aggfnoid\n")
         wxT("  JOIN pg_type ti on ti.oid=proargtypes[0]\n")
         wxT("  JOIN pg_type tt on tt.oid=aggtranstype\n")
@@ -143,14 +159,27 @@ pgObject *pgAggregate::ReadObjects(pgCollection *collection, wxTreeCtrl *browser
             if (aggregates->GetVal(wxT("inputname")) == wxT("any"))
                 aggregate->iSetInputType(wxT("\"any\""));
             else
-            aggregate->iSetInputType(aggregates->GetVal(wxT("inputname")));
+                aggregate->iSetInputType(aggregates->GetVal(wxT("inputname")));
             aggregate->iSetStateType(aggregates->GetVal(wxT("transname")));
             aggregate->iSetStateFunction(aggregates->GetVal(wxT("aggtransfn")));
             aggregate->iSetFinalType(aggregates->GetVal(wxT("finalname")));
-            aggregate->iSetFinalFunction(aggregates->GetVal(wxT("aggfinalfn")));
+
+            wxString final=aggregates->GetVal(wxT("aggfinalfn"));
+            if (final != wxT("-"))
+                aggregate->iSetFinalFunction(final);
             aggregate->iSetInitialCondition(aggregates->GetVal(wxT("agginitval")));
             aggregate->iSetComment(aggregates->GetVal(wxT("description")));
-
+            if (collection->GetDatabase()->BackendMinimumVersion(8, 1))
+            {
+                wxString oprname=aggregates->GetVal(wxT("oprname"));
+                if (!oprname.IsEmpty())
+                {
+                    wxString oprnsp=aggregates->GetVal(wxT("oprnsp"));
+                    aggregate->iSetSortOp(collection->GetDatabase()->GetSchemaPrefix(oprnsp) + oprname);
+                    aggregate->iSetQuotedSortOp(collection->GetDatabase()->GetQuotedSchemaPrefix(oprnsp)
+                        + qtIdent(oprname));
+                }
+            }
 
             if (browser)
             {
