@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <resource>
   <object class="wxDialog" name="dlgAggregate">
     <title></title>
@@ -7,105 +7,170 @@
         <label>Properties</label>
         <object class="wxPanel" name="pnlProperties">
           <object class="wxStaticText" name="stName">
+            
             <label>Name</label>
+            
             <pos>5,7d</pos>
           </object>
           <object class="wxTextCtrl" name="txtName">
+            
             <pos>70,5d</pos>
+            
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stOID">
+            
             <label>OID</label>
+            
             <pos>5,22d</pos>
           </object>
           <object class="wxTextCtrl" name="txtOID">
+            
             <pos>70,20d</pos>
+            
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stOwner">
+            
             <label>Owner</label>
+            
             <pos>5,37d</pos>
           </object>
           <object class="ctlComboBox" name="cbOwner">
+            
             <pos>70,35d</pos>
+            
             <size>135,12d</size>
+            
             <content/>
+            
             <style>wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stBaseType">
+            
             <label>Input type</label>
+            
             <pos>5,52d</pos>
           </object>
           <object class="ctlComboBox" name="cbBaseType">
+            
             <content/>
+            
             <pos>70,50d</pos>
+            
             <size>135,12d</size>
+            
             <style>wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stStateType">
+            
             <label>State type</label>
+            
             <pos>5,67d</pos>
           </object>
           <object class="ctlComboBox" name="cbStateType">
+            
             <content/>
+            
             <pos>70,65d</pos>
+            
             <size>135,12d</size>
+            
             <style>wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stStateFunc">
+            
             <label>State function</label>
+            
             <pos>5,82d</pos>
           </object>
           <object class="wxComboBox" name="cbStateFunc">
+            
             <content/>
+            
             <pos>70,80d</pos>
+            
             <size>135,12d</size>
+            
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stFinalFunc">
+            
             <label>Final function</label>
+            
             <pos>5,97d</pos>
           </object>
           <object class="wxComboBox" name="cbFinalFunc">
+            
             <content/>
+            
             <pos>70,95d</pos>
+            
+            <size>135,12d</size>
+            
+            <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+          </object>
+          <object class="wxStaticText" name="stSortOp">
+            <label>Sort Operator</label>
+            <pos>5,112d</pos>
+          </object>
+          <object class="wxComboBox" name="cbSortOp">
+            <content/>
+            <pos>70,110d</pos>
             <size>135,12d</size>
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stInitial">
+            
             <label>Initial condition</label>
-            <pos>5,112d</pos>
+            
+            <pos>5,127d</pos>
           </object>
           <object class="wxTextCtrl" name="txtInitial">
-            <pos>70,110d</pos>
+            
+            <pos>70,125d</pos>
+            
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stComment">
+            
             <label>Comment</label>
-            <pos>5,127d</pos>
+            
+            <pos>5,142d</pos>
           </object>
           <object class="wxTextCtrl" name="txtComment">
-            <pos>70,125d</pos>
-            <size>135,72d</size>
+            
+            <pos>70,140d</pos>
+            
+            <size>135,57d</size>
+            
             <style>wxTE_MULTILINE</style>
           </object>
         </object>
+        
         <selected>1</selected>
       </object>
       <pos>2,2d</pos>
       <size>214,215d</size>
     </object>
     <object class="wxButton" name="wxID_HELP">
+      
       <label>Help</label>
+      
       <pos>3,221d</pos>
     </object>
     <object class="wxButton" name="wxID_OK">
+      
       <label>OK</label>
+      
       <default>1</default>
+      
       <pos>113,221d</pos>
     </object>
     <object class="wxButton" name="wxID_CANCEL">
+      
       <label>Cancel</label>
+      
       <pos>166,221d</pos>
     </object>
     <size>218,240d</size>
